--- a/page-about-me.html
+++ b/page-about-me.html
@@ -60,14 +60,15 @@
 	<div class="qualites-box">
 		<i class="fa-solid fa-handshake"></i>
 		<h3>curieux</h3>
+		<p>un attribut important dans le monde de la programmation qui facilite le travail</p>
 
 	</div>
 	</div>
 	</ul>
 </ul>
 </div>
-<script src="background animation.js"></script>
-<script src="main.js"></script>
+<script src="javascript/background animation.js"></script>
+<script src="javascript/main.js"></script>
 
 </body>
 
