--- a/page-principal-v2.html
+++ b/page-principal-v2.html
@@ -32,13 +32,13 @@
 				a EDTA SORNAS.
 			</p>
 		</div>
-		<img src="theoV3.png">
+		<img src="image/theoV3.png">
 	</div>
 
 
 </div>
-<script src="background animation.js"></script>
-<script src="main.js"></script>
+<script src="javascript/background animation.js"></script>
+<script src="javascript/main.js"></script>
 
 </body>
 
