--- a/page-bts-sio.html
+++ b/page-bts-sio.html
@@ -19,24 +19,19 @@
 <div class = main>
 
 	<div class = "topnav">
-		<a href = "page-about-me.html">About me</a>
-		<a href = "page-bts-sio.html">BTS SIO</a>
+		<a href="page-principal-v2.html">Acceuil</a>
 		<a>Contact</a>
-
 	</div>
-
-	<div class="card">
-		<div class="circle"> </div>
-		<div class="content">
-			<h2>Qui suis-je:</h2>
-			<p>Je m'appelle Theo Breton j ai 19 ans je suis actuellement en BTS SIO option SLAM
-				a EDTA SORNAS.
-			</p>
-		</div>
-		<img src="image/theoV3.png">
-	</div>
+	<ul>
+	<li><h2>QU'EST CE AUE LE BTS SIO ?</h2></li>
+	<p class = main-text>Le Brevet de Technicien Supérieur aux Services Informatiques aux Organisations, 
+		s'adresse à ceux qui souhaitent se former en deux ans aux métiers d'administrateur réseau ou de développeur.
+		Pour par la suite intégrer directement le marché du travail ou continuer des études, dans le domaine de l'informatique.
+	</p>
 
 
+	</ul>
+</ul>
 </div>
 <script src="javascript/background animation.js"></script>
 <script src="javascript/main.js"></script>
