--- a/page-about-me.html
+++ b/page-about-me.html
@@ -19,9 +19,14 @@
 <div class = main>
 
 	<div class = "topnav">
-		<a href="page-principal-v2.html">Acceuil</a>
+		<a href = "page-principal-v2.html">Acceuil</a>
+		<a href = "page-bts-sio.html">BTS SIO</a>
+		<a href = "https://quasar42.herokuapp.com/">realisation 1</a>
+		<a href = "https://quasar42.herokuapp.com/">realisation 2</a>
 		<a>Contact</a>
+
 	</div>
+
 	<ul>
 	<li><h2>A PROPOS DE MOI</h2></li>
 	<p class = main-text>Je m appelle Theo Breton,je suis age de 19 ans.
