--- a/page-bts-sio.html
+++ b/page-bts-sio.html
@@ -19,11 +19,16 @@
 <div class = main>
 
 	<div class = "topnav">
-		<a href="page-principal-v2.html">Acceuil</a>
+		<a href = "page-principal-v2.html">Acceuil</a>
+		<a href = "page-about-me.html">About me</a>
+		<a href = "page-bts-sio.html">BTS SIO</a>
+		<a href = "https://quasar42.herokuapp.com/">realisation 1</a>
+		<a href = "https://quasar42.herokuapp.com/">realisation 2</a>
 		<a>Contact</a>
+
 	</div>
 	<ul>
-	<li><h2>QU'EST CE AUE LE BTS SIO ?</h2></li>
+	<li><h2>QU'EST CE QUE LE BTS SIO ?</h2></li>
 	<p class = main-text>Le Brevet de Technicien Supérieur aux Services Informatiques aux Organisations, 
 		s'adresse à ceux qui souhaitent se former en deux ans aux métiers d'administrateur réseau ou de développeur.
 		Pour par la suite intégrer directement le marché du travail ou continuer des études, dans le domaine de l'informatique.
