--- a/page-principal-v2.html
+++ b/page-principal-v2.html
@@ -21,6 +21,8 @@
 	<div class = "topnav">
 		<a href = "page-about-me.html">About me</a>
 		<a href = "page-bts-sio.html">BTS SIO</a>
+		<a href = "https://quasar42.herokuapp.com/">realisation 1</a>
+		<a href = "https://quasar42.herokuapp.com/">realisation 2</a>
 		<a>Contact</a>
 
 	</div>
@@ -37,13 +39,30 @@
 	</div>
 
 
+	<div class="wrapper">
+		<div class ="icon instagram">
+			<div class="tooltop">Instagram</div>
+		<span><i class="fab fa-instagram"></i></span>
+		</div>
+	</div>
+	
+	<div class="wrapper">
+		<div class ="icon github">
+			<div class="tooltop">Github</div>
+		<span><i class="fab fa-github"></i></span>
+		</div>
+	</div>
+
 </div>
 <script src="javascript/background animation.js"></script>
 <script src="javascript/main.js"></script>
 
+
+
 </body>
 
 <footer>
+
 
 </footer>
 
