added little social media link buttons

--- a/page-principal-v2.html
+++ b/page-principal-v2.html
@@ -41,14 +41,12 @@
 
 	<div class="wrapper">
 		<div class ="icon instagram">
-			<div class="tooltop">Instagram</div>
+			<div class="tooltip">Instagram</div>
 		<span><i class="fab fa-instagram"></i></span>
 		</div>
-	</div>
 	
-	<div class="wrapper">
 		<div class ="icon github">
-			<div class="tooltop">Github</div>
+			<div class="tooltip">Github</div>
 		<span><i class="fab fa-github"></i></span>
 		</div>
 	</div>
