added a few tingas

--- a/page-principal-v2.html
+++ b/page-principal-v2.html
@@ -26,7 +26,15 @@
 		<a>Contact</a>
 
 	</div>
+	
+	<div class="presentation">
+	
+	<div class="bonjour">bonjour</div>
 
+	<div class="present"><div>Je m'appelle</div><div class="name"> Theo Breton</div></div>
+
+	</div>
+	<!--
 	<div class="card">
 		<div class="circle"> </div>
 		<div class="content">
@@ -36,22 +44,30 @@
 			</p>
 		</div>
 		<img src="image/theoV3.png">
-	</div>
-
+	</div>-->
+	 
 
 	<div class="wrapper">
-		<div class ="icon instagram">
+		<div class ="icon instagram" >
 			<div class="tooltip">Instagram</div>
 		<span><i class="fab fa-instagram"></i></span>
 		</div>
 	
-		<div class ="icon github">
+		<div class ="icon github" href: >
 			<div class="tooltip">Github</div>
 		<span><i class="fab fa-github"></i></span>
+		</div>
+
+		<div class ="icon linkedin" href: >
+			<div class="tooltip">Linkedin</div>
+		<span><i class="fab fa-linkedin"></i></span>
+
 		</div>
 	</div>
 
 </div>
+
+
 <script src="javascript/background animation.js"></script>
 <script src="javascript/main.js"></script>
 
