the link work now

--- a/page-bts-sio.html
+++ b/page-bts-sio.html
@@ -34,6 +34,7 @@
 		Pour par la suite intégrer directement le marché du travail ou continuer des études, dans le domaine de l'informatique.
 	</p>
 
+	<div class></div>
 
 	</ul>
 </ul>
