--- a/page-principal-v2.html
+++ b/page-principal-v2.html
@@ -22,19 +22,12 @@
 		<a href = "page-about-me.html">About me</a>
 		<a href = "page-bts-sio.html">BTS SIO</a>
 		<a href = "https://quasar42.herokuapp.com/">realisation 1</a>
-		<a href = "https://quasar42.herokuapp.com/">realisation 2</a>
+		<a href = "https://toutenbeaute.net/">realisation 2</a>
 		<a>Contact</a>
 
 	</div>
 	
-	<div class="presentation">
-	
-	<div class="bonjour">bonjour</div>
 
-	<div class="present"><div>Je m'appelle</div><div class="name"> Theo Breton</div></div>
-
-	</div>
-	<!--
 	<div class="card">
 		<div class="circle"> </div>
 		<div class="content">
@@ -44,23 +37,30 @@
 			</p>
 		</div>
 		<img src="image/theoV3.png">
-	</div>-->
+	</div>
 	 
 
 	<div class="wrapper">
+		
 		<div class ="icon instagram" >
 			<div class="tooltip">Instagram</div>
+		<a href="https://www.instagram.com/yelotelo/">	
 		<span><i class="fab fa-instagram"></i></span>
+		</a>
 		</div>
 	
-		<div class ="icon github" href: >
+		<div class ="icon github" >
 			<div class="tooltip">Github</div>
-		<span><i class="fab fa-github"></i></span>
+			<a href="https://github.com/theo-bretonjpg">
+			<span><i class="fab fa-github"></i></span>
+			</a>
 		</div>
 
-		<div class ="icon linkedin" href: >
+		<div class ="icon linkedin"  >
 			<div class="tooltip">Linkedin</div>
-		<span><i class="fab fa-linkedin"></i></span>
+			<a href="https://www.linkedin.com/in/theo-breton-3302201b6/">
+			<span><i class="fab fa-linkedin"></i></span>
+			</a>
 
 		</div>
 	</div>
