--- a/page-about-me.html
+++ b/page-about-me.html
@@ -21,32 +21,36 @@
 	<div class = "topnav">
 		<a href = "page-principal-v2.html">Acceuil</a>
 		<a href = "page-bts-sio.html">BTS SIO</a>
-		<a href = "https://quasar42.herokuapp.com/">realisation 1</a>
-		<a href = "https://quasar42.herokuapp.com/">realisation 2</a>
+		<a href = "https://github.com/theo-bretonjpg/Sacem/blob/main/Sacem-V12.ps1">realisation 1</a>
+		<a href = "https://toutenbeaute.net/">realisation 2</a>
 		<a>Contact</a>
 
 	</div>
 
 	<ul>
+	<div class= main-leftcolumn>	
 	<li><h2>A PROPOS DE MOI</h2></li>
-	<p class = main-text>Je m appelle Theo Breton,je suis age de 19 ans.
-		je suis actuallement etudiant a Sornas, en deuxieme annee de BTS "SIO specialite SLAM"
-		Services Informatiques aux Organisations option Solutions Logicielles et Applications Métiers.
+	<p class = main-text>Je m’appelle Theo Breton,je suis agé de 19 ans.
+        je suis actuellement étudiant à Sornas, en deuxième année de BTS "SIO spécialité SLAM"
+        Services Informatiques aux Organisations option Solutions Logicielles et Applications Métiers.
 	</p>
 	<li><h2>EXPERIENCES PROFESSIONNELLES</h2></li>
-	<p class = main-text>J'ai eu l'opportunité d'effectuer 2 differentes alternance en milieux professionnelles,
-		pendant mes 2 annee de BTS.
-		Pendant ses alternances j'ai creer plusieurs application, un site web de vente de produits comestique,  
+	<p class = main-text>J'ai eu l'opportunité d'effectuer 2 différentes alternances en milieu professionnel, pendant mes 2 années de BTS.
+        Pendant ces alternances j'ai créé plusieurs applications, un site web de vente de produits cométique.  
 	</p>
+
+	</div>
+	<div class = main-rightcolumn> 
 	<li><h2>PROJET PROFESSIONNEL</h2></li>
 	<p class = main-text>
-		Mon projet professionnel aujourd'hui est de devenir « Devellopeur web fullstack ». 
-		J'essaie d'integrer l'ecole d'ingenieur de epita a Paris, pour suivre durant 3 ans,
-		le Cycle expert en apprentissage formation diplômante bac+5.
-		Je souhaite de faire  de l'apprentissage en l'alternance pour gagner plus d'experiences avec de vrai projet, 
-		en grandissant avec elle, en apportant mes compétences. Ma motivation et de partageant ma passion de la programmation et de l'informatique.
-		En participant à la mise en œuvre de n'importe quelle projets informatiques.
+        Mon projet professionnel aujourd'hui est de devenir « Développeur web fullstack ».
+        J'essaie d'intégrer l'école d'ingénieur de Epita a Paris, pour suivre durant 3 ans,
+        le Cycle expert en apprentissage formation diplômante bac+5.
+        Je souhaite de faire de l'apprentissage en l'alternance pour acquérir plus d'expériences avec de vrais projets, en grandissant avec elle, 
+		en apportant mes compétences et ma motivation, en partageant aussi ma passion de la programmation et de l'informatique, 
+		en participant à la mise en œuvre de n'importe quel projet informatique.
 	</p>
+	</div>
 
 	<li><h2>MES QUALITES</h2></li>
 	<div class="qualitiesfield">
@@ -68,11 +72,50 @@
 		<p>un attribut important dans le monde de la programmation qui facilite le travail</p>
 
 	</div>
+
 	</div>
-	</ul>
-</ul>
+	<li><h2>Mes compétences</h2></li>
+
+	 <div class=main-leftcolumn>
+
+		<h3>Compétences aquises</h3>
+
+		<p class = main-text>
+			Toutes ces connaissances ont été acquises de différentes façons. 
+			Elles ont été acquises durant mes études et d'autres par ma propre initiative en essayant de mettre en place des solutions. 
+			J’ai également relevé les défis organisés, ce qui permet d’effectuer des recherches et aller encore plus loin.
+		</p>
+
+		<h3>Programmation</h3>
+
+		<p class = main-text>La programmation est une compétence très utile et importante, 
+			elle nous permet de nous donner un ordre d'idée de fonctionnement d'une solution. 
+			La programmation informatique est l'écriture de programmes servant à créer un logiciel. 
+			Un programme contient l'ensemble des informations nécessaires pour que le logiciel remplisse sa tâche.
+	 </div>
+	 <div class = main-rightcolumn>
+		 <h4>Windows (Windows Serveur 2003 à 2016, Windows XP à Windows 10)<h4>
+		 <div class="progressbar"><div class=windows></div></div>
+		 <h4>HTML,CSS,javascript<h4>
+		 <div class="progressbar"><div class=htmlcssprog></div></div>
+		 <h4>Powershell<h4>
+			<div class="progressbar"><div class=powershell></div></div>
+		 <h4>Python<h4>
+			<div class="progressbar"><div class=python></div></div>
+			<h4>SQL<h4>
+				<div class="progressbar"><div class=SQL></div></div>
+			<h4>c<h4>
+				<div class="progressbar"><div class=c></div></div>
+		
+	 </div>
+	 <li><h2>CURRICULUM VITAE</h2></li>
+	 <div class=cvbox><a href= "Theo-Breton-CV-V12-SORNAS.pdf">consulter cv</a></div>
+	</ul>	 
 </div>
-<script src="javascript/background animation.js"></script>
+
+
+
+<script src="javascript/background-animation.js"></script>
 <script src="javascript/main.js"></script>
 
 </body>
