--- a/page-principal-v2.html
+++ b/page-principal-v2.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<script src="https://kit.fontawesome.com/200dfd4db8.js" crossorigin="anonymous"></script>
-	<link rel ="stylesheet" href="page-principal.css">
+	<link rel="stylesheet" href="page-principal.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
 	<div class = "topnav">
 		<a href = "page-about-me.html">About me</a>
 		<a href = "page-bts-sio.html">BTS SIO</a>
-		<a href = "https://quasar42.herokuapp.com/">realisation 1</a>
+		<a href = "https://github.com/theo-bretonjpg/Sacem/blob/main/Sacem-V12.ps1">realisation 1</a>
 		<a href = "https://toutenbeaute.net/">realisation 2</a>
 		<a>Contact</a>
 
@@ -39,7 +39,6 @@
 		<img src="image/theoV3.png">
 	</div>
 	 
-
 	<div class="wrapper">
 		
 		<div class ="icon instagram" >
@@ -68,7 +67,7 @@
 </div>
 
 
-<script src="javascript/background animation.js"></script>
+<script src="javascript/background-animation.js"></script>
 <script src="javascript/main.js"></script>
 
 
