--- a/page-about-me.html
+++ b/page-about-me.html
@@ -21,8 +21,8 @@
 	<div class = "topnav">
 		<a href = "page-principal-v2.html">Acceuil</a>
 		<a href = "page-bts-sio.html">BTS SIO</a>
-		<a href = "https://github.com/theo-bretonjpg/Sacem/blob/main/Sacem-V12.ps1">realisation 1</a>
-		<a href = "https://toutenbeaute.net/">realisation 2</a>
+		<a href = "https://github.com/theo-bretonjpg/Sacem/blob/main/Sacem-V12.ps1" target="_blank">realisation 1</a>
+		<a href = "https://toutenbeaute.net/" target="_blank">realisation 2</a>
 		<a>Contact</a>
 
 	</div>
@@ -109,7 +109,9 @@
 		
 	 </div>
 	 <li><h2>CURRICULUM VITAE</h2></li>
-	 <div class=cvbox><a href= "Theo-Breton-CV-V12-SORNAS.pdf">consulter cv</a></div>
+	 <div class=cvbox><a href= "Theo-Breton-CV-V12-SORNAS.pdf" target="_blank">consulter cv</a></div>
+	 <li><h2>TABLEAU DE SYNTHESE</h2></li>
+	 <div class=cvbox><a href= "Theo-Breton_Annexe_6-1_-_Tableau_de_synthese_-_Epreuve_E4_-_BTS_SIO_2022.xlsx" target="_blank">consulter tableau</a></div>
 	</ul>	 
 </div>
 
