--- a/page-principal-v2.html
+++ b/page-principal-v2.html
@@ -21,8 +21,8 @@
 	<div class = "topnav">
 		<a href = "page-about-me.html">About me</a>
 		<a href = "page-bts-sio.html">BTS SIO</a>
-		<a href = "https://github.com/theo-bretonjpg/Sacem/blob/main/Sacem-V12.ps1">realisation 1</a>
-		<a href = "https://toutenbeaute.net/">realisation 2</a>
+		<a href = "https://github.com/theo-bretonjpg/Sacem/blob/main/Sacem-V12.ps1" target="_blank">realisation 1</a>
+		<a href = "https://toutenbeaute.net/" target="_blank">realisation 2</a>
 		<a>Contact</a>
 
 	</div>
@@ -36,28 +36,28 @@
 				a EDTA SORNAS.
 			</p>
 		</div>
-		<img src="image/theoV3.png">
+		<img src="image/theoV5.jpg">
 	</div>
 	 
 	<div class="wrapper">
 		
 		<div class ="icon instagram" >
 			<div class="tooltip">Instagram</div>
-		<a href="https://www.instagram.com/yelotelo/">	
+		<a href="https://www.instagram.com/yelotelo/" target="_blank">	
 		<span><i class="fab fa-instagram"></i></span>
 		</a>
 		</div>
 	
 		<div class ="icon github" >
 			<div class="tooltip">Github</div>
-			<a href="https://github.com/theo-bretonjpg">
+			<a href="https://github.com/theo-bretonjpg" target="_blank">
 			<span><i class="fab fa-github"></i></span>
 			</a>
 		</div>
 
 		<div class ="icon linkedin"  >
 			<div class="tooltip">Linkedin</div>
-			<a href="https://www.linkedin.com/in/theo-breton-3302201b6/">
+			<a href="https://www.linkedin.com/in/theo-breton-3302201b6/" target="_blank">
 			<span><i class="fab fa-linkedin"></i></span>
 			</a>
 
